Updated information about covered data views

--- a/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx
+++ b/docs/salesforce/marketing-cloud-engagement/config/system-data-views.mdx
@@ -26,7 +26,7 @@ Another important point related to Data Views is always knowing which Data View 
 
 :::note You Should Know
 
-Below you can find selected Salesforce Marketing Cloud Data Views focused on Subscribers, Journeys, Email and SMS Channel. I plan to cover the rest of them in the future.
+Below you can find selected Salesforce Marketing Cloud Data Views focused on Subscribers, Emails, Journeys and Automations. You can find the SMS Channel Data Views in [Mobile Connect Data Views article](/docs/salesforce/marketing-cloud-engagement/config/mobile-connect-data-views.mdx).
 
 Be sure to check the excellent [Dataviews.io](https://dataviews.io) - an interactive system tables relationship diagram created by [Zuzanna Jarczyńska](https://sfmarketing.cloud/author/zjarczynska/). It will for sure help you with multi-view [`JOIN`s](/docs/salesforce/marketing-cloud-engagement/sql/sql-join.mdx).
 
