Updated draft of SF Marketing Products FAQ

--- a/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
+++ b/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
@@ -132,17 +132,17 @@ All Marketing Cloud Account Engagement customers already receive access to the n
 
 __Name history__: Marketing Cloud Growth (MCG) » Marketing Cloud Advanced (MCA) » Marketing Cloud [on Core] (MCoC)» Marketing Cloud Next (MCN) » Marketing Cloud (MC)
 
-The newest of the three products, Marketing Cloud, is a fresh take on Marketing Automation. Announced in 2024, it is built from scratch on the Data Cloud (now Data 360) platform, leveraging its capabilities and integrations with other Salesforce products (especially the new hype champion - Agentforce).
+The newest of the three products, Marketing Cloud, is a fresh take on Marketing Automation. Announced in 2024, it is built from scratch on the Data 360 (now Data 360) platform, leveraging its capabilities and integrations with other Salesforce products (especially the new hype champion - Agentforce).
 
 Based on it's current features, it is designed for small businesses and small marketing teams, both B2C and B2B, with basic marketing needs. It's not that clear however, when you consider the pre-requisite of having at least Enterprise tier Salesforce CRM licence to use it. It is not a standalone Marketing Automation platform like Marketing Cloud Engagement, but rather a complementary product.
 
- Marketing Cloud focuses a drag-and-drop interface, rich segmentation with Data Cloud and automated marketing operations with Agentforce for Marketing that can automatically create briefs, emails and customer journeys in Flows. On the other hand the tool currently offers limited features and minimal customization options. It's heavily developed and rapidly catching up to Marketing Cloud Account Engagement with B2B focused features, but still not a perfect match and not even close in terms of stability.
+ Marketing Cloud focuses a drag-and-drop interface, rich segmentation with Data 360 and automated marketing operations with Agentforce for Marketing that can automatically create briefs, emails and customer journeys in Flows. On the other hand the tool currently offers limited features and minimal customization options. It's heavily developed and rapidly catching up to Marketing Cloud Account Engagement with B2B focused features, but still not a perfect match and not even close in terms of stability.
 
 :::note You Should Know
 
 Salesforce Marketing Cloud is definitely the future of Marketing Automation on the Salesforce platform. It has great ideas and massive potential - definitely needed to compete with other modern Marketing Automation platforms on the market.
 
-However, right now it's a very immature product with numerous bugs, limited features and heavily layered usage-based pricing. It's great as a complimentary product for existing MCE & MCAE customers to experiment with new features, but not ready yet to confidently stand on its own (unless you are existing Data Cloud customer with very basic email needs).
+However, right now it's a very immature product with numerous bugs, limited features and heavily layered usage-based pricing. It's great as a complimentary product for existing MCE & MCAE customers to experiment with new features, but not ready yet to confidently stand on its own (unless you are existing Data 360 customer with very basic email needs).
 
 :::
 
@@ -194,18 +194,18 @@ However, if you are using Marketing Cloud Engagement, it is still the best optio
 
 __Name history__: Einstein Personalization (EP) » Salesforce Personalization (SP)
 
-Salesforce Personalization is one of the newest products in the Salesforce Marketing Cloud ecosystem. Announced in 2024, it is built from scratch on the Data Cloud (now Data 360) platform, leveraging its capabilities and integrations with other Salesforce products.
+Salesforce Personalization is one of the newest products in the Salesforce Marketing Cloud ecosystem. Announced in 2024, it is built from scratch on the Data 360 (now Data 360) platform, leveraging its capabilities and integrations with other Salesforce products.
 
 It is designed to work in tandem with Marketing Cloud and other Salesforce products, providing real-time personalization capabilities that utilize your entire Salesforce ecosystem. It also leverages Agentforce and Lightning Platform to provide a no-code, drag-and-drop interface that is easy to use and set up.
 
 :::note You Should Know
 
-Similarly to Marketing Cloud, Salesforce Personalization seems to be the future of real-time personalization on the Salesforce platform. However, it's only selling point is the tight integration with Data Cloud and easy usage in the new suite of Salesforce Products.
+Similarly to Marketing Cloud, Salesforce Personalization seems to be the future of real-time personalization on the Salesforce platform. However, it's only selling point is the tight integration with Data 360 and easy usage in the new suite of Salesforce Products.
 
 On the other hand:
 1. It is a very immature product with limited features, nowhere near the capabilities of Marketing Cloud Personalization. 2. There is no migration path from MCP to SP.
 3. There is no clear indication if SP will ever reach feature parity with MCP.
-4. Due to it being built on Data Cloud, it is using Sub-Second Real-Time Event Credits - second most expensive credit type after Profile Unification Credits (that are also required) - making it a very costly alternative to more powerful MCP.
+4. Due to it being built on Data 360, it is using Sub-Second Real-Time Event Credits - second most expensive credit type after Profile Unification Credits (that are also required) - making it a very costly alternative to more powerful MCP.
 
 :::
 
@@ -214,12 +214,12 @@ On the other hand:
 | Feature/Aspect | Marketing Cloud Personalization (MCP) | Salesforce Personalization (SP) |
 |--|--|--|
 | **Target Audience** | Medium & Large | Small & Medium |
-| **Use Case** | Complex and business-specific personalization | Basic personalization leveraging Data Cloud information |
+| **Use Case** | Complex and business-specific personalization | Basic personalization leveraging Data 360 information |
 | **Salesforce CRM** | Optional | Required |
 | **Flexibility & Customisability** | High | Low |
 | **Ease of Use** | Moderate | Low |
 | **Setup Complexity** | Moderate | High |
-| **Key Features** | Multichannel personalization, AI-driven recommendations, and heavy customization | Drag & drop interface, agentic support and Data Cloud integration |
+| **Key Features** | Multichannel personalization, AI-driven recommendations, and heavy customization | Drag & drop interface, agentic support and Data 360 integration |
 | **Community & Resources** | Strong | Growing |
 | **Pricing** | Moderate | It's complicated |
 | **Ideal For** | Businesses with personalization and recommendation needs | Businesses with small volumes and huge margins |
@@ -235,11 +235,33 @@ As I don't have much experience with neither of them, I won't go into details he
 
 ## Salesforce Marketing Future
 
+As you can see, Salesforce Marketing Cloud product (and naming) landscape is changing a lot now. We are currently going through a stretched transition period where the old and new products are co-existing side by side. What does it mean for you?
 
+### For Implementation Partners
+
+If you are implementation partner, the current landscape is both a challenge and an opportunity.
+
+On one hand, the transition period means that there will be a lot new business for you, as customers will need help with migrating from old products to new ones, and with setting up and using the new products. The best part? You don't even have to go through full sales funnel to get new leads for it - your past successfull implementations are the best leads for introducing the new features. Additionally, if you are focused on Salesforce it also means that you can target new audiences covered by the fresh offerings and extend your pripieline.
+
+On the other hand it means that you will need to invest in learning the new products and staying up-to-date with the latest developments. The new products are still evolving, and there will be a lot of changes and updates in the coming months and years. You will need to be flexible and adaptable to keep up with the changes. And it won't be easy - new products are built on new platforms (Data 360, Agentforce 360) that are different from the old ones, and you will need to learn new skills and technologies to work with them.
+
+The next few years will be balancing act between leveraging your existing expertise for ongoing implementations of old tools and investing in new skills to unlock the new opportunities. But if you can do it, you will be well-positioned to take advantage of the transition and position yourself as a leader for the Next Marketing Cloud.
+
+### For Specialists
+
+If you are Marketing Automation specialist, you will have challenging times ahead.
+
+One thing is clear - Data 360 will be the fundament of Salesforce Marketing going forward. If you want to stay relevant in the Salesforce Marketing Automation space, you will need to learn how to work with Data 360, and how to leverage its capabilities for marketing purposes. This includes understanding data modelling, segmentation, audience building, and data governance on Data 360 platform. Don't stop at certification - go deeper and understand the platform capabilities and limitations. Every single new Marketing Cloud product will leverage this knowledge.
+
+If your specialty was Marketing Cloud Account Engagement, you have advatage of already being familiar with Salesforce CRM platform. However, as the new Marketing Cloud is soon to replace MCAE (and already is offered for free to existing customers to facilitate this move) you don't have much time to learn the new tool and its capabilities. Dive into Data 360 Agentforce 360 to be ready for the change.
+
+If you were Marketing Cloud Engagement specialist, you have more time on your hands. MCE is not going anywhere soon, and there will be need for skilled people to support existing customers for years to come. However, you should start learning the new Marketing Cloud as well, as Marketing Cloud Engagement Plus licences are already here. They not only provide existing customers with the ne product licence, but also bring synergy between the two products. It means that even if your MCE platform is still a safe harbour for years to come, the need for MC Next skills on top of it to deliver full value of the product. Data 360 and Agentforce 360 knowledge will be key here as well.
+
+In both scenarios, you should also start getting familiar with Salesforce CRM platform. Flows, Apex, LWC, Sandboxes, DevOps - those are the skills that will help you work effectively with the new Marketing Cloud products.
 
 ### For Customers
 
-### For Implementation Partners
+
 
 {/*
 ## Salesforce Marketing Cloud Glossary
@@ -252,7 +274,7 @@ The original use of Salesforce Marketing Cloud name, between 2012 and 2014, was 
 
 With the acquisition of [ExactTarget](#exacttarget) in 2013, Salesforce reused the Marketing Cloud name for this new flagship Marketing Automation product. Previous social media platform became just part of this new solution as a [Social Studio](#salesforce-marketing-cloud-social-studio). This naming convention held till 2022, when that flagship product was renamed to [Marketing Cloud Engagement](#salesforce-marketing-cloud-engagement-mce).
 
-Salesforce did it to once more reuse the Marketing Cloud name, this time for their new Marketing Automation solution created from the ground up on the [Data Cloud](#salesforce-data-cloud) platform, known also as [Marketing Cloud on Core](#salesforce-marketing-cloud), [Marketing Cloud Growth](#salesforce-marketing-cloud-growth) and [Marketing Cloud Advanced](#salesforce-marketing-cloud-advanced).
+Salesforce did it to once more reuse the Marketing Cloud name, this time for their new Marketing Automation solution created from the ground up on the [Data 360](#salesforce-data-cloud) platform, known also as [Marketing Cloud on Core](#salesforce-marketing-cloud), [Marketing Cloud Growth](#salesforce-marketing-cloud-growth) and [Marketing Cloud Advanced](#salesforce-marketing-cloud-advanced).
 
 Currently the Marketing Cloud name is used frequently for both products (especially in the community), which frequently leads to confusion.
 
@@ -292,7 +314,7 @@ Marketing Cloud Personalization is the current name for the product formerly kno
 
 Learn more about Marketing Cloud Personalization in [my MCP Docs](/docs/category/salesforce/marketing-cloud-personalization/).
 
-Since 2023 it is not actively developed further as Salesforce is focusing on recreating its capabilities in the new [Salesforce Personalization](#salesforce-personalization) product built on the [Data Cloud](#salesforce-data-cloud) as a replacement.
+Since 2023 it is not actively developed further as Salesforce is focusing on recreating its capabilities in the new [Salesforce Personalization](#salesforce-personalization) product built on the [Data 360](#salesforce-data-cloud) as a replacement.
 
 ### Interaction Studio
 
@@ -325,7 +347,7 @@ Marketing Cloud Advertising is the current name for the product formerly known a
 
 Currently being retired with end of renewals: 15 August 2026.
 
-Salesforce recommends moving to [Data Cloud](#data-cloud) Ad Audiences product as a replacement, but (for now?) there is neither migration path nor feature parity between the two products.
+Salesforce recommends moving to [Data 360](#data-cloud) Ad Audiences product as a replacement, but (for now?) there is neither migration path nor feature parity between the two products.
 
 ### Salesforce Marketing Cloud Advertising Studio
 
@@ -339,9 +361,9 @@ It was retired on 18 November 2024.
 
 Salesforce doesn't provide any direct replacement, but recommends using a third-party solution they partnered with: Sprout Social.
 
-### Salesforce Data Cloud (DC)
+### Salesforce Data 360 (DC)
 
-### Salesforce Data Cloud Ad Audiences */}
+### Salesforce Data 360 Ad Audiences */}
 
 
 
