Updated draft of SF Marketing Products FAQ

--- a/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
+++ b/sites/faq/salesforce/what-is-the-difference-between-sf-marketing-clouds.mdx
@@ -261,6 +261,28 @@ In both scenarios, you should also start getting familiar with Salesforce CRM pl
 
 ### For Customers
 
+A lot depends on whether you are already using any of the existing Marketing Cloud products or not.
+
+#### Looking for Marketing Automation Platform
+
+If you are looking for Marketing Automation Platform and Salesforce offering looks interesting to you (for example because you are already using their CRM or needs extremly flexible and powerful platform), the [Marketing Automation Platforms](#marketing-automation-platforms) section should help you choose the right product for your needs.
+
+The rule of thumb is:
+- If you need complex and highly customisable solution, go for Marketing Cloud Engagement.
+- If you need something simpler, B2B focused, with good support and maturity, go for Marketing Cloud Account Engagement.
+- If you are Salesforce CRM (and - even better - Data 360) user and just need basic marketing capabilities with agentic support to minimise the effort, go for Marketing Cloud.
+
+However, this will need an update in a year or two.
+
+#### With Marketing Cloud Account Engagement
+
+If you are using Marketing Cloud Account Engagement, you already have access to the new Marketing Cloud product (if you don't know anything about it, contact your Salesforce Account Executive). Start experimenting with it and gradually move your marketing activities there. Keep an eye on the new features being added, and plan your migration accordingly. The winter for MCAE is coming.
+
+#### With Marketing Cloud Engagement
+
+If you are using Marketing Cloud Engagement, you are in a safe (for now). However, your team should start getting familiar with the Data 360 and new Marketing Cloud product as well, as Marketing Cloud Engagement Plus licences are already here (if you don't yet have it, you will get it during the next renewal).
+
+MCE+ will not only provide you with the new Marketing Cloud product licence, but also bring synergy between the two products through new features (Multi-Journey management through Flows, Digital Wallet for consumption, etc.). You don't have to worry about your existing implementation, it will be perfectly fine for years to come. But to deliver full value of the Salesforce Marketing Cloud ecosystem, your team will need to master the new tool as well.
 
 
 {/*
